--- a/wagtail/wagtailadmin/static_src/wagtailadmin/scss/layouts/page-editor.scss
+++ b/wagtail/wagtailadmin/static_src/wagtailadmin/scss/layouts/page-editor.scss
@@ -425,19 +425,6 @@ footer .preview {
             padding-left: 3em;
         }
 
-        &.stream-field {
-            .object-help {
-                opacity: 0;
-                position: relative;
-                width: 100%;
-                padding-left: 6.4em;
-            }
-
-            &:hover .object-help {
-                opacity: 1;
-            }
-        }
-
         &.full {
             fieldset {
                 @include column(11);
